--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 .env
+.env.staging
+.env.production
+.env.development
+.env.test
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
