--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "jotai": "^2.13.1",
     "lucide-react": "^0.488.0",
     "moment": "^2.30.1",
     "next-themes": "^0.4.6",
